--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -5,7 +5,7 @@
     <title>Sacred-Island Microservice</title>
     <style>
         body {
-            color: #ffffff;
+            color: #fffffb;
             background-color: purple;
             font-family: Arial, sans-serif;
             font-size: 14px;
