--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             color: #fffffb;
-            background-color: blue;
+            background-color: green;
             font-family: Arial, sans-serif;
             font-size: 14px;
         }
